# TradePilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AGENTS_zh.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py
app/analysis/: decision.py  event.py  fundamental.py  response.py  sentiment.py  technical.py  trade_plan.py
app/analysis/event/: __init__.py  aggregate.py  company_catalysts.py  macro_sensitivity.py  module.py  scheduled_events.py  schemas.py
app/analysis/fundamental/: __init__.py  aggregate.py  earnings_momentum.py  financial_health.py  module.py  schemas.py  valuation_anchor.py
app/analysis/sentiment/: __init__.py  aggregate.py  expectation_shift.py  module.py  narrative_crowding.py  news_tone.py  normalize.py  schemas.py
app/analysis/synthesis/: __init__.py  adapt.py  output.py  (+2 more)
app/api/: main.py
app/db/: migrate.py  pool.py
app/graph/: builder.py
app/repositories/: analysis_reports.py  postgresql_analysis_reports.py
app/rules/: __init__.py  decision.py  messages.py  runtime.py  trade_plan.py  versions.py
app/schemas/: api.py  graph_state.py  modules.py
docs/design/: overview.md  overview_zh.md
tests/: test_contract_documents.py
tests/api/: test_main.py
tests/db/: test_migrate.py  test_pool.py
tests/golden/: conftest.py  test_synthesis_golden_cases.py  test_trade_plan_golden_cases.py
tests/graph/: test_builder.py
tests/repositories/: test_postgresql_analysis_reports.py
tests/schemas/: test_api_request_models.py  test_api_response_models.py  test_graph_state_models.py  test_module_schemas.py
(+174 files in other folders)
