[project]
name = "tradepilot"
version = "0.1.0"
description = "Contract-first backend for structured US stock analysis."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
