[project]
name = "tradepilot"
version = "0.1.0"
description = "Contract-first backend for structured US stock analysis."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "langgraph>=1.1.6",
    "openai>=2.6.1,<3.0.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.44.0,<1.0.0",
    "yfinance>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.0.0,<2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
